# markdown_log

./: .gitignore  .travis.yml  README  README.md  log.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check.yml
md_log/: __init__.py  daily_targets.py  parser.py  xbar.py
tests/: test_base.py  test_daily_targets.py  test_main.py  test_parser.py
