[tool.poetry]
name = "md_log"
version = "0.1.0"
description = ""
authors = ["alex <alex@pdp7.net>"]

[tool.poetry.dependencies]
python = ">=3.6"
panflute = "^1.12"
tabulate = "^0.8.8"
dataclasses = { version = "0.8", python = "~3.6" }

[tool.poetry.dev-dependencies]
ipython = "*"
ipdb = "*"
flake8 = "*"
black = { version = "*", allow-prereleases = true }
flake8-black = "*"
pytest = "*"
mypy = "*"
types-tabulate = "^0.1.1"
types-dataclasses = "^0.1.4"

[tool.poetry.scripts]
md_log = 'md_log:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
